--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Flask==0.12.2
 Flask-Cors==3.0.3
 Flask-RESTful==0.3.6
 Flask-SQLAlchemy==2.2
+gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.9.6
 kombu==4.0.2
